--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 title: Serenade Wind
 email: serenadewind@gmail.com
 locale: "en-US"
+encoding: UTF-8
 ampdir: amp
 description: Follow us as we embark on this new journey from quitting our corporate jobs and buying a boat to downsizing our possessions in order to begin our sailing adventure around the world. 
 url: 'https://serenadewind.com'
